	- MC_PRE_PLAYERHUD_RENDER_ACTIVE_ITEM(EntityPlayer, ActiveSlot, Vector offset, float alpha, float scale, Vector chargeBarOffset) - Return true to cancel rendering
	- MC_PRE_PLAYER_REVIVE(EntityPlayer) - Return false to prevent the player from reviving
	- MC_POST_PLAYER_REVIVE(EntityPlayer)
	- MC_POST_PROJECTILE/TEAR_DEATH (EntityProjectile/EntityTear)
* All stages now have a spritesheet suffix (formatted _[stage name, no spaces], ex _burningbasement)
* Added the "noshake" attribute to the players.xml which can "disable" the player portrait shaking animation in the nightmare scene/boss intro
* Added the "nometronome" attribute to items.xml to prevent items from being picked by Metronome
/newline/
Fixes:
    * Fixed `Isaac.CreateTimer` crashing the game when setting the delay argument to 0
	* Fixed bonehearts not displaying correctly when set through players.xml
	* Fixed console custom commands starting with "help" not triggering while being eaten away by repentogon's help cmd
	* Fixed a crash that could occur if Isaac exited the Berserk! state without any remaining health with Spirit Shackles ready
	* Reverted Flooded Caves suffix to _downpour so enemies keep their existing custom spritesheet
	* Potentially fixed reported but unreproducable instance of a trapdoor deal room variant being generated outside of floor 8
	* Fixed incorrect declaration for ItemConfig::GetTaggedItems
/newline/
Modified:
* Game:ShowGenericLeaderboard no longer fades to main menu
/newline/
v1.0.8c - 
Fixes:
* Fixed adding a callback function with an optional param to a vanilla callback that does not support optional params leading to that function never being called, where it used to previously.
* Fixed the result of Isaac.GetCallbacks() no longer having a metatable.
/newline/
v1.0.8b - 
Fixes:
* Fixed the MC_PLAYER_GET_HEALTH_TYPE callback causing the last heart to render underneath the first one.
/newline/
v1.0.8a - 
Fixes: