@@ -200,6 +200,10 @@ ModCallbacks.MC_PRE_PICKUP_COMPOSTED = 1267
 ModCallbacks.MC_POST_PLAYER_TRIGGER_EFFECT_REMOVED = 1268
 ModCallbacks.MC_POST_ROOM_TRIGGER_EFFECT_REMOVED = 1269
 
+ModCallbacks.MC_POST_BOSS_INTRO_SHOW = 1270
+ModCallbacks.MC_POST_ROOM_TRANSITION_UPDATE = 1271
+ModCallbacks.MC_POST_ROOM_TRANSITION_RENDER = 1272
+
 ModCallbacks.MC_PRE_RENDER_CUSTOM_CHARACTER_MENU = 1333
 ModCallbacks.MC_PRE_PICKUP_GET_LOOT_LIST = 1334
 ModCallbacks.MC_PRE_PICKUP_UPDATE_GHOST_PICKUPS = 1335
